--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@keystonejs/fields": "^13.0.0",
     "@keystonejs/keystone": "^11.1.0",
     "cross-env": "^7.0.0",
+    "nodemailer": "^6.4.10",
     "resolve-pathname": "^3.0.0"
   }
 }
